完成变成规约章节

--- a/编程规约/命名风格.md
+++ b/编程规约/命名风格.md
@@ -1,8 +1,10 @@
 # 一、编程规约
 
+---
+
 ## （一）命名风格
 
-1. **<font color=#FF0000>【强制】</font>** 代码中的命名均不能以<strong>下划线或美元符号</strong>开始，也不能以<strong>下划线或美元符号</strong>结束。
+1. **<font color=#FF0000>【强制】</font>** 代码中的命名均不能以 **下划线或美元符号** 开始，也不能以 **下划线或美元符号** 结束。
   
 <font color=#FF0000>反例</font>：`_name / __name / $name / name_ / name$ / name__`
 
