--- a/编程规约/并发处理.md
+++ b/编程规约/并发处理.md
@@ -1,63 +1,205 @@
-## (六) 并发处理 
-1. 【强制】获取单例对象需要保证线程安全，其中的方法也要保证线程安全。 
-<br><span style="color:orange">说明</span>：资源驱动类、工具类、单例工厂类都需要注意。 
-2. 【强制】创建线程或线程池时请指定有意义的线程名称，方便出错时回溯。 
-<br><span style="color:green">正例</span>：
-```
-    public class TimerTaskThread extends Thread {      
-        public TimerTaskThread() {      
-              super.setName("TimerTaskThread");   
-              ... 
-        }
+## (七) 并发处理 
+
+---
+
+1. **<font color=#FF0000>【强制】</font>**  获取单例对象需要保证线程安全，其中的方法也要保证线程安全。
+
+<font color=#FF0000>说明</font>： 资源驱动类、工具类、单例工厂类都需要注意。
+
+
+2. **<font color=#FF0000>【强制】</font>**  创建线程或线程池时请指定有意义的线程名称，方便出错时回溯。
+
+<font color=#008000>正例</font>： 自定义线程工厂，并且根据外部特征进行分组， 比如， 来自同一机房的调用，把机房编号赋值给 whatFeaturOfGroup
+
+```java
+public class UserThreadFactory implements ThreadFactory {
+    private final String namePrefix;
+    private final AtomicInteger nextId = new AtomicInteger(1);
+    // 定义线程组名称，在 jstack 问题排查时，非常有帮助
+    UserThreadFactory(String whatFeaturOfGroup) {
+        namePrefix = "From UserThreadFactory's " + whatFeaturOfGroup + "-Worker-";
     }
-```  
-3. 【强制】线程资源必须通过线程池提供，不允许在应用中自行显式创建线程。 
-<br><span style="color:orange">说明</span>：使用线程池的好处是减少在创建和销毁线程上所花的时间以及系统资源的开销，解决资源不足的问题。如果不使用线程池，有可能造成系统创建大量同类线程而导致消耗完内存或者“过度切换”的问题。 
-4. 【强制】线程池不允许使用Executors去创建，而是通过ThreadPoolExecutor的方式，这样的处理方式让写的同学更加明确线程池的运行规则，规避资源耗尽的风险。 
-<br><span style="color:orange">说明</span>：Executors返回的线程池对象的弊端如下：
-1）`FixedThreadPool`和`SingleThreadPool`:   允许的请求队列长度为Integer.MAX_VALUE，可能会堆积大量的请求，从而导致OOM。
-2）`CachedThreadPool`和`ScheduledThreadPool`:   允许的创建线程数量为Integer.MAX_VALUE，可能会创建大量的线程，从而导致OOM。
-5. 【强制】SimpleDateFormat 是线程不安全的类，一般不要定义为static变量，如果定义为static，必须加锁，或者使用DateUtils工具类。 
-<br><span style="color:green">正例</span>：注意线程安全，使用`DateUtils`。亦推荐如下处理： 
+    
+	@Override
+    public Thread newThread(Runnable task) {
+        String name = namePrefix + nextId.getAndIncrement();
+        Thread thread = new Thread(null, task, name, 0, false);
+        System.out.println(thread.getName());
+        return thread;
+    }
+}
 ```
-private static final ThreadLocal<DateFormat> df = new ThreadLocal<DateFormat>() {        
-    Override        
-    protected DateFormat initialValue() {         
-        return new SimpleDateFormat("yyyy-MM-dd");        
-    }    
+
+
+3. **<font color=#FF0000>【强制】</font>**  线程资源必须通过线程池提供，不允许在应用中自行显式创建线程。
+
+<font color=#FF0000>说明</font>： 线程池的好处是减少在创建和销毁线程上所消耗的时间以及系统资源的开销，解决资源不足的问题。如果不使用线程池，有可能造成系统创建大量同类线程而导致消耗完内存或者“过度切换” 的问题。
+
+
+4. **<font color=#FF0000>【强制】</font>**  线程池不允许使用 Executors 去创建，而是通过 ThreadPoolExecutor 的方式，这样的处理方式让写的同学更加明确线程池的运行规则，规避资源耗尽的风险。
+
+<font color=#FF0000>说明</font>： Executors 返回的线程池对象的弊端如下：
+
+1） FixedThreadPool 和 SingleThreadPool：
+允许的请求队列长度为 Integer.MAX_VALUE，可能会堆积大量的请求，从而导致 OOM。
+
+2） CachedThreadPool：
+允许的创建线程数量为 Integer.MAX_VALUE， 可能会创建大量的线程，从而导致 OOM。
+
+
+5. **<font color=#FF0000>【强制】</font>**  SimpleDateFormat 是线程不安全的类，一般不要定义为 static 变量，如果定义为 static，必须加锁，或者使用 DateUtils 工具类。
+
+<font color=#008000>正例</font>： 注意线程安全，使用 DateUtils。亦推荐如下处理：
+
+```java
+private static final ThreadLocal<DateFormat> df = new ThreadLocal<DateFormat>() {
+    @Override
+    protected DateFormat initialValue() {
+        return new SimpleDateFormat("yyyy-MM-dd");
+    }
 };
-```   
-<span style="color:orange">说明</span>：如果是JDK8的应用，可以使用`Instant`代替`Date`，`LocalDateTime`代替`Calendar`，`DateTimeFormatter`代替`SimpleDateFormat`，官方给出的解释：
->simple beautiful strong immutable thread-safe。
-6. 【强制】高并发时，同步调用应该去考量锁的性能损耗。能用无锁数据结构，就不要用锁；能锁区块，就不要锁整个方法体；能用对象锁，就不要用类锁。 <br><span style="color:orange">说明</span>：尽可能使加锁的代码块工作量尽可能的小，避免在锁代码块中调用RPC方法。 
-7. 【强制】对多个资源、数据库表、对象同时加锁时，需要保持一致的加锁顺序，否则可能会造成死锁。 <br><span style="color:orange">说明</span>：线程一需要对表A、B、C依次全部加锁后才可以进行更新操作，那么线程二的加锁顺序也必须是A、B、C，否则可能出现死锁。 
-8. 【强制】并发修改同一记录时，避免更新丢失，需要加锁。要么在应用层加锁，要么在缓存加锁，要么在数据库层使用乐观锁，使用version作为更新依据。 <br><span style="color:orange">说明</span>：如果每次访问冲突概率小于20%，推荐使用乐观锁，否则使用悲观锁。乐观锁的重试次数不得小于3次。 
-9. 【强制】多线程并行处理定时任务时，Timer运行多个TimeTask时，只要其中之一没有捕获抛出的异常，其它任务便会自动终止运行，使用`ScheduledExecutorService`则没有这个问题。 
-10. 【推荐】使用`CountDownLatch`进行异步转同步操作，每个线程退出前必须调用countDown方法，线程执行代码注意catch异常，确保countDown方法被执行到，避免主线程无法执行至await方法，直到超时才返回结果。 <br><span style="color:orange">说明</span>：注意，子线程抛出异常堆栈，不能在主线程try-catch到。 
-11. 【推荐】避免Random实例被多线程使用，虽然共享该实例是线程安全的，但会因竞争同一seed 导致的性能下降。 
-<br><span style="color:orange">说明</span>：Random实例包括java.util.Random 的实例或者 Math.random()的方式。 
-<br><span style="color:green">正例</span>：在JDK7之后，可以直接使用API ThreadLocalRandom，而在 JDK7之前，需要编码保证每个线程持有一个实例。 
-12. 【推荐】在并发场景下，通过双重检查锁（double-checked locking）实现延迟初始化的优化问题隐患(可参考 The "Double-Checked Locking is Broken" Declaration)，推荐解决方案中较为简单一种（适用于JDK5及以上版本），将目标属性声明为 volatile型。 
-<br><span style="color:red">反例</span>：
 ```
-  class Singleton {   
-        private Helper helper = null;  
-        public Helper getHelper() {  
-          if (helper == null) 
-          synchronized(this) {      
-            if (helper == null)        
-            helper = new Helper();    
-          }      
-          return helper;  
-        }  
-        // other methods and fields...  
-  }
+
+<font color=#FF0000>说明</font>： 如果是 JDK8 的应用，可以使用 Instant 代替 Date， LocalDateTime 代替 Calendar，DateTimeFormatter 代替 SimpleDateFormat，官方给出的解释： simple beautiful strong immutable thread-safe。
+
+
+6. **<font color=#FF0000>【强制】</font>**  必须回收自定义的 ThreadLocal 变量，尤其在线程池场景下，线程经常会被复用，如果不清理自定义的 ThreadLocal 变量，可能会影响后续业务逻辑和造成内存泄露等问题。尽量在代理中使用 try-finally 块进行回收。
+
+<font color=#008000>正例</font>：
+
+```java
+objectThreadLocal.set(userInfo);
+try {
+    // ...
+} finally {
+    objectThreadLocal.remove();
+}
 ```
-13. 【参考】volatile解决多线程内存不可见问题。对于一写多读，是可以解决变量同步问题，但是如果多写，同样无法解决线程安全问题。如果是count++操作，使用如下类实现：
+
+
+7. **<font color=#FF0000>【强制】</font>**  高并发时，同步调用应该去考量锁的性能损耗。能用无锁数据结构，就不要用锁； 能锁区块，就不要锁整个方法体； 能用对象锁，就不要用类锁。
+
+<font color=#FF0000>说明</font>： 尽可能使加锁的代码块工作量尽可能的小，避免在锁代码块中调用 RPC 方法。
+
+
+8. **<font color=#FF0000>【强制】</font>**  对多个资源、数据库表、对象同时加锁时，需要保持一致的加锁顺序，否则可能会造成死锁。
+
+<font color=#FF0000>说明</font>： 线程一需要对表 A、 B、 C 依次全部加锁后才可以进行更新操作，那么线程二的加锁顺序也必须是 A、B、 C，否则可能出现死锁。
+
+
+9. **<font color=#FF0000>【强制】</font>**  在使用阻塞等待获取锁的方式中，必须在 try 代码块之外，并且在加锁方法与 try 代码块之间没有任何可能抛出异常的方法调用，避免加锁成功后，在 finally 中无法解锁。
+
+<font color=#FF0000>说明</font>一： 如果在 lock 方法与 try 代码块之间的方法调用抛出异常，那么无法解锁，造成其它线程无法成功获取锁。
+
+<font color=#FF0000>说明</font>二： 如果 lock 方法在 try 代码块之内，可能由于其它方法抛出异常，导致在 finally 代码块中， unlock 对未加锁的对象解锁，它会调用 AQS 的 tryRelease 方法（取决于具体实现类），抛出IllegalMonitorStateException 异常。
+
+<font color=#FF0000>说明</font>三： 在 Lock 对象的 lock 方法实现中可能抛出 unchecked 异常，产生的后果与<font color=#FF0000>说明</font>二相同。
+
+<font color=#008000>正例</font>：
+
+```java
+Lock lock = new XxxLock();
+// ...
+lock.lock();
+try {
+    doSomething();
+    doOthers();
+} finally {
+    lock.unlock();
+}
 ```
-AtomicInteger count = new AtomicInteger(); 
-count.addAndGet(1); 
+
+<font color=#FF0000>反例</font>：
+
+```java
+Lock lock = new XxxLock();
+// ...
+try {
+    // 如果此处抛出异常，则直接执行 finally 代码块
+    doSomething();
+    // 无论加锁是否成功， finally 代码块都会执行
+    lock.lock();
+    doOthers();
+} finally {
+    lock.unlock();
+}
 ```
-如果是JDK8，推荐使用`LongAdder`对象，比`AtomicLong`性能更好（减少乐观锁的重试次数）。
-14. 【参考】 HashMap在容量不够进行resize时由于高并发可能出现死链，导致CPU飙升，在开发过程中可以使用其它数据结构或加锁来规避此风险。 
-15. 【参考】`ThreadLocal`无法解决共享对象的更新问题，`ThreadLocal`对象建议使用static修饰。这个变量是针对一个线程内所有操作共享的，所以设置为静态变量，所有此类实例共享此静态变量 ，也就是说在类第一次被使用时装载，只分配一块存储空间，所有此类的对象(只要是这个线程内定义的)都可以操控这个变量。 
+
+10. **<font color=#FF0000>【强制】</font>**  在使用尝试机制来获取锁的方式中，进入业务代码块之前，必须先判断当前线程是否持有锁。锁的释放规则与锁的阻塞等待方式相同。
+
+<font color=#FF0000>说明</font>： Lock 对象的 unlock 方法在执行时，它会调用 AQS 的 tryRelease 方法（取决于具体实现类），如果当前线程不持有锁，则抛出 IllegalMonitorStateException 异常。
+
+<font color=#008000>正例</font>：
+
+```java
+Lock lock = new XxxLock();
+// ...
+boolean isLocked = lock.tryLock();
+if (isLocked) {
+    try {
+        doSomething();
+        doOthers();
+    } finally {
+        lock.unlock();
+    }
+}
+```
+
+
+11. **<font color=#FF0000>【强制】</font>**  并发修改同一记录时，避免更新丢失， 需要加锁。 要么在应用层加锁，要么在缓存加锁，要么在数据库层使用乐观锁，使用 version 作为更新依据。
+
+<font color=#FF0000>说明</font>： 如果每次访问冲突概率小于 20%，推荐使用乐观锁，否则使用悲观锁。乐观锁的重试次数不得小于 3 次。
+
+
+12. **<font color=#FF0000>【强制】</font>**  多线程并行处理定时任务时， Timer 运行多个 TimeTask 时，只要其中之一没有捕获抛出的异常，其它任务便会自动终止运行， 使用 ScheduledExecutorService 则没有这个问题。
+
+
+13. **<font COLOR=#FFD700>【推荐】</font>** 资金相关的金融敏感信息，使用悲观锁策略。
+
+<font color=#FF0000>说明</font>： 乐观锁在获得锁的同时已经完成了更新操作，校验逻辑容易出现漏洞，另外，乐观锁对冲突的解决策略有较复杂的要求，处理不当容易造成系统压力或数据异常，所以资金相关的金融敏感信息不建议使用乐观锁更新。
+
+<font color=#008000>正例</font>： 悲观锁遵循一锁二判三更新四释放的原则
+
+
+14. **<font COLOR=#FFD700>【推荐】</font>** 使用 CountDownLatch 进行异步转同步操作，每个线程退出前必须调用 countDown 方法，线程执行代码注意 catch 异常，确保 countDown 方法被执行到，避免主线程无法执行至 await 方法，直到超时才返回结果。
+
+<font color=#FF0000>说明</font>： 注意，子线程抛出异常堆栈，不能在主线程 try-catch 到。
+
+
+15. **<font COLOR=#FFD700>【推荐】</font>**避免 Random 实例被多线程使用，虽然共享该实例是线程安全的，但会因竞争同一 seed 导致的性能下降。
+
+<font color=#FF0000>说明</font>： Random 实例包括 java.util.Random 的实例或者 Math.random()的方式。
+
+<font color=#008000>正例</font>： 在 JDK7 之后，可以直接使用 API ThreadLocalRandom， 而在 JDK7 之前， 需要编码保证每个线程持有一个单独的 Random 实例。
+
+
+16. **<font COLOR=#FFD700>【推荐】</font>** 通过双重检查锁（ double-checked locking） （ 在并发场景下） 实现延迟初始化的优化问题隐患(可参考 The "Double-Checked Locking is Broken" Declaration)， 推荐解决方案中较为简单一种（ 适用于 JDK5 及以上版本） ，将目标属性声明为 volatile 型（ 比如修改 helper 的属性声明为`private volatile Helper helper = null;`） 。
+
+<font color=#FF0000>反例</font>：
+
+```java
+public class LazyInitDemo {
+    private Helper helper = null;
+    public Helper getHelper() {
+        if (helper == null) {
+            synchronized (this) {
+                if (helper == null) { helper = new Helper(); }
+            }
+        }
+        return helper;
+    }
+    // other methods and fields...
+}
+```
+
+17. **<font color=#008000>【参考】</font>** volatile 解决多线程内存不可见问题。对于一写多读，是可以解决变量同步问题，但是如果多写，同样无法解决线程安全问题。
+
+<font color=#FF0000>说明</font>： 如果是 count++操作，使用如下类实现： AtomicInteger count = new AtomicInteger(); count.addAndGet(1); 如果是 JDK8，推荐使用 LongAdder 对象，比 AtomicLong 性能更好（减少乐观锁的重试次数）。
+
+
+18. **<font color=#008000>【参考】</font>** HashMap 在容量不够进行 resize 时由于高并发可能出现死链，导致 CPU 飙升，在开发过程中注意规避此风险。
+
+
+19. **<font color=#008000>【参考】</font>** ThreadLocal 对象使用 static 修饰， ThreadLocal 无法解决共享对象的更新问题。
+
+<font color=#FF0000>说明</font>： 这个变量是针对一个线程内所有操作共享的，所以设置为静态变量，所有此类实例共享此静态变量，也就是说在类第一次被使用时装载，只分配一块存储空间，所有此类的对象(只要是这个线程内定义的)都可以操控这个变量。
