--- a/编程规约/代码格式.md
+++ b/编程规约/代码格式.md
@@ -26,12 +26,12 @@ if (空格a == b空格)
 
 4.  **<font color=#FF0000>【强制】</font>** 任何二目、 三目运算符的左右两边都需要加一个空格。
    
-<font color=#FF0000>说明</font>：包括赋值运算符=、逻辑运算符&&、加减乘除符号等。
+<font color=#FFD700>说明</font>：包括赋值运算符=、逻辑运算符&&、加减乘除符号等。
 
 
 5.  **<font color=#FF0000>【强制】</font>** 采用 4 个空格缩进，禁止使用 tab 字符。
   
-<font color=#FF0000>说明</font>：
+<font color=#FFD700>说明</font>：
 如果使用 tab 缩进，必须设置 1 个 tab 为 4 个空格。 IDEA 设置 tab 为 4 个空格时，请勿勾选 `Use tab character` ；而在 eclipse 中，必须勾选 `insert spaces for tabs` 。
    
 <font color=#008000> 正例</font>： （涉及1-5点）
@@ -128,7 +128,7 @@ method(args1, args2, args3);
 
 11. **<font COLOR=#FFD700>【推荐】</font>**  单个方法的总行数不超过 80 行。
 
-<font color=#FF0000>说明</font>： 除注释之外的方法签名、 左右大括号、方法内代码、空行、回车及任何不可见字符的总行数不超过80 行。
+<font color=#FFD700>说明</font>： 除注释之外的方法签名、 左右大括号、方法内代码、空行、回车及任何不可见字符的总行数不超过80 行。
 
 <font color=#008000> 正例</font>： 代码逻辑分清红花和绿叶，个性和共性，绿叶逻辑单独出来成为额外方法，使主干代码更加清晰；共性逻辑抽取成为共性方法，便于复用和维护。
 
@@ -144,9 +144,9 @@ float three = 3F;
 StringBuilder sb = new StringBuilder();
 ```
 
-<font color=#FF0000>说明</font>：增加 sb 这个变量，如果需要对齐，则给 one、 two、 three 都要增加几个空格，在变量比较多的情况下，是非常累赘的事情。
+<font color=#FFD700>说明</font>：增加 sb 这个变量，如果需要对齐，则给 one、 two、 three 都要增加几个空格，在变量比较多的情况下，是非常累赘的事情。
 
 
 13. **<FONT COLOR=#FFD700>【推荐】</FONT>** 不同逻辑、不同语义、不同业务的代码之间插入一个空行分隔开来以提升可读性。
 
-<font color=#FF0000>说明</font>：任何情形， 没有必要插入**多个空行**进行隔开。
+<font color=#FFD700>说明</font>：任何情形， 没有必要插入**多个空行**进行隔开。
