--- a/编程规约/常量定义.md
+++ b/编程规约/常量定义.md
@@ -48,7 +48,7 @@ cache.put(key, value);
 
 5. **<font COLOR=#FFD700>【推荐】</font>**如果变量值仅在一个固定范围内变化用 enum 类型来定义。 
 
-<font color=#FF0000>说明</font>：如果存在名称之外的延伸属性应使用 enum 类型，下面正例中的数字就是延伸信息，表示一年中的第几个季节。
+<font color=#FFD700>说明</font>：如果存在名称之外的延伸属性应使用 enum 类型，下面正例中的数字就是延伸信息，表示一年中的第几个季节。
  
 <font color=#008000> 正例</font>： 
 ```java
