--- a/编程规约/控制语句.md
+++ b/编程规约/控制语句.md
@@ -2,9 +2,9 @@
 
 ---
 
-1. **<font color=#FF0000>【强制】</font>**  在一个 switch 块内，每个 case 要么通过 continue/break/return 等来终止，要么注释<font color=#FF0000>说明</font>程序将继续执行到哪一个 case 为止；在一个 switch 块内，都必须包含一个 default语句并且放在最后，即使它什么代码也没有。
+1. **<font color=#FF0000>【强制】</font>**  在一个 switch 块内，每个 case 要么通过 continue/break/return 等来终止，要么注释<font color=#FFD700>说明</font>程序将继续执行到哪一个 case 为止；在一个 switch 块内，都必须包含一个 default语句并且放在最后，即使它什么代码也没有。
 
-<font color=#FF0000>说明</font>： 注意 break 是退出 switch 语句块，而 return 是退出方法体。
+<font color=#FFD700>说明</font>： 注意 break 是退出 switch 语句块，而 return 是退出方法体。
 
 
 2. **<font color=#FF0000>【强制】</font>**  当 switch 括号内的变量类型为 String 并且此变量为外部参数时，必须先进行 null 判断。
@@ -37,12 +37,12 @@ public class SwitchString {
 
 3. **<font color=#FF0000>【强制】</font>**  在 if/else/for/while/do 语句中必须使用大括号。
 
-<font color=#FF0000>说明</font>： 即使只有一行代码， 禁止不采用大括号的编码方式： if (condition) statements;
+<font color=#FFD700>说明</font>： 即使只有一行代码， 禁止不采用大括号的编码方式： if (condition) statements;
 
 
 4. **<font color=#FF0000>【强制】</font>**  三目运算符 condition? 表达式 1 : 表达式 2 中，高度注意表达式 1 和 2 在类型对齐时，可能抛出因自动拆箱导致的 NPE 异常。
 
-<font color=#FF0000>说明</font>： 以下两种场景会触发类型对齐的拆箱操作：
+<font color=#FFD700>说明</font>： 以下两种场景会触发类型对齐的拆箱操作：
 
 1） 表达式 1 或表达式 2 的值只要有一个是原始类型。
 
@@ -62,14 +62,14 @@ Integer result=(flag? a*b : c);
 
 5. **<font color=#FF0000>【强制】</font>**  在高并发场景中，避免使用” 等于” 判断作为中断或退出的条件。
 
-<font color=#FF0000>说明</font>： 如果并发控制没有处理好，容易产生等值判断被“击穿” 的情况，使用大于或小于的区间判断条件来代替。
+<font color=#FFD700>说明</font>： 如果并发控制没有处理好，容易产生等值判断被“击穿” 的情况，使用大于或小于的区间判断条件来代替。
 
 <font color=#FF0000>反例</font>： 判断剩余奖品数量等于 0 时，终止发放奖品，但因为并发处理错误导致奖品数量瞬间变成了负数，这样的话，活动无法终止。
 
 
 6. **<font COLOR=#FFD700>【推荐】</font>** 当某个方法的代码行数超过 10 行时， return / throw 等中断逻辑的右大括号后加一个空行。
 
-<font color=#FF0000>说明</font>： 这样做逻辑清晰，有利于代码阅读时重点关注。
+<font color=#FFD700>说明</font>： 这样做逻辑清晰，有利于代码阅读时重点关注。
 
 
 7. **<font COLOR=#FFD700>【推荐】</font>** 表达异常的分支时， 少用 if-else 方式， 这种方式可以改写成：
@@ -82,7 +82,7 @@ if (condition) {
 // 接着写 else 的业务逻辑代码;
 ```
 
-<font color=#FF0000>说明</font>： 如果非使用 if()...else if()...else...方式表达逻辑， 避免后续代码维护困难， 请勿超过 3 层。
+<font color=#FFD700>说明</font>： 如果非使用 if()...else if()...else...方式表达逻辑， 避免后续代码维护困难， 请勿超过 3 层。
 
 <font color=#008000>正例</font>： 超过 3 层的 if-else 的逻辑判断代码可以使用卫语句、策略模式、状态模式等来实现，其中卫语句示例如下：
 
@@ -107,7 +107,7 @@ public void findBoyfriend (Man man){
 
 8. **<font COLOR=#FFD700>【推荐】</font>** 除常用方法（如 getXxx/isXxx）等外，不要在条件判断中执行其它复杂的语句，将复杂逻辑判断的结果赋值给一个有意义的布尔变量名，以提高可读性。
 
-<font color=#FF0000>说明</font>： 很多 if 语句内的逻辑表达式相当复杂，与、或、取反混合运算，甚至各种方法纵深调用，理解成本非常高。如果赋值一个非常好理解的布尔变量名字，则是件令人爽心悦目的事情。
+<font color=#FFD700>说明</font>： 很多 if 语句内的逻辑表达式相当复杂，与、或、取反混合运算，甚至各种方法纵深调用，理解成本非常高。如果赋值一个非常好理解的布尔变量名字，则是件令人爽心悦目的事情。
 
 <font color=#008000>正例</font>：
 
@@ -131,7 +131,7 @@ public final void acquire ( long arg){
 
 9. **<font COLOR=#FFD700>【推荐】</font>** 不要在其它表达式（尤其是条件表达式）中，插入赋值语句。
 
-<font color=#FF0000>说明</font>： 赋值点类似于人体的穴位，对于代码的理解至关重要，所以赋值语句需要清晰地单独成为一行。
+<font color=#FFD700>说明</font>： 赋值点类似于人体的穴位，对于代码的理解至关重要，所以赋值语句需要清晰地单独成为一行。
 
 <font color=#FF0000>反例</font>：
 
@@ -150,7 +150,7 @@ public Lock getLock(boolean fair) {
 
 11. **<font COLOR=#FFD700>【推荐】</font>** 避免采用取反逻辑运算符。
 
-<font color=#FF0000>说明</font>： 取反逻辑不利于快速理解，并且取反逻辑写法必然存在对应的正向逻辑写法。
+<font color=#FFD700>说明</font>： 取反逻辑不利于快速理解，并且取反逻辑写法必然存在对应的正向逻辑写法。
 
 <font color=#008000>正例</font>： 使用 if (x < 628) 来表达 x 小于 628。
 
@@ -176,7 +176,7 @@ public Lock getLock(boolean fair) {
 
 
 14.  **<font color=#008000>【参考】</font>** 下列情形， 不需要进行参数校验：
-1） 极有可能被循环调用的方法。但在方法<font color=#FF0000>说明</font>里必须注明外部参数检查。
+1） 极有可能被循环调用的方法。但在方法<font color=#FFD700>说明</font>里必须注明外部参数检查。
 
 2） 底层调用频度比较高的方法。毕竟是像纯净水过滤的最后一道，参数错误不太可能到底层才会暴露问题。一般 DAO 层与 Service 层都在同一个应用中，部署在同一台服务器中，所以 DAO 的参数校验，可以省略。
 
