--- a/编程规约/注释规约.md
+++ b/编程规约/注释规约.md
@@ -4,17 +4,17 @@
 
 1. **<font color=#FF0000>【强制】</font>**  类、类属性、类方法的注释必须使用 Javadoc 规范，使用/**内容*/格式，不得使用 // xxx 方式。
 
-<font color=#FF0000>说明</font>： 在 IDE 编辑窗口中， Javadoc 方式会提示相关注释，生成 Javadoc 可以正确输出相应注释；在 IDE 中，工程调用方法时，不进入方法即可悬浮提示方法、参数、返回值的意义，提高阅读效率。
+<font color=#FFD700>说明</font>： 在 IDE 编辑窗口中， Javadoc 方式会提示相关注释，生成 Javadoc 可以正确输出相应注释；在 IDE 中，工程调用方法时，不进入方法即可悬浮提示方法、参数、返回值的意义，提高阅读效率。
 
 
-2. **<font color=#FF0000>【强制】</font>**  所有的抽象方法（ 包括接口中的方法） 必须要用 Javadoc 注释、除了返回值、参数、异常<font color=#FF0000>说明</font>外，还必须指出该方法做什么事情，实现什么功能。
+2. **<font color=#FF0000>【强制】</font>**  所有的抽象方法（ 包括接口中的方法） 必须要用 Javadoc 注释、除了返回值、参数、异常<font color=#FFD700>说明</font>外，还必须指出该方法做什么事情，实现什么功能。
 
-<font color=#FF0000>说明</font>： 对子类的实现要求，或者调用注意事项，请一并<font color=#FF0000>说明</font>。
+<font color=#FFD700>说明</font>： 对子类的实现要求，或者调用注意事项，请一并<font color=#FFD700>说明</font>。
 
 
 3. **<font color=#FF0000>【强制】</font>**  所有的类都必须添加创建者和创建日期。
 
-<font color=#FF0000>说明</font>： 在设置模板时，注意 IDEA 的@author 为`${USER}`，而 eclipse 的@author 为`${user}`，大小写有区别，而日期的设置统一为 yyyy/MM/dd 的格式。
+<font color=#FFD700>说明</font>： 在设置模板时，注意 IDEA 的@author 为`${USER}`，而 eclipse 的@author 为`${user}`，大小写有区别，而日期的设置统一为 yyyy/MM/dd 的格式。
 
 正例：
 
@@ -29,7 +29,7 @@
 4. **<font color=#FF0000>【强制】</font>**  方法内部单行注释，在被注释语句上方另起一行，使用//注释。方法内部多行注释使用/* */注释，注意与代码对齐。
 
 
-5. **<font color=#FF0000>【强制】</font>**  所有的枚举类型字段必须要有注释，<font color=#FF0000>说明</font>每个数据项的用途。
+5. **<font color=#FF0000>【强制】</font>**  所有的枚举类型字段必须要有注释，<font color=#FFD700>说明</font>每个数据项的用途。
 
 
 6. **<font COLOR=#FFD700>【推荐】</font>** 与其“半吊子” 英文来注释，不如用中文注释把问题说清楚。专有名词与关键字保持英文原文即可。
@@ -39,15 +39,15 @@
 
 7. **<font COLOR=#FFD700>【推荐】</font>** 代码修改的同时，注释也要进行相应的修改，尤其是参数、返回值、异常、核心逻辑等的修改。
 
-<font color=#FF0000>说明</font>： 代码与注释更新不同步，就像路网与导航软件更新不同步一样，如果导航软件严重滞后，就失去了导航的意义。
+<font color=#FFD700>说明</font>： 代码与注释更新不同步，就像路网与导航软件更新不同步一样，如果导航软件严重滞后，就失去了导航的意义。
 
 
 8. **<font COLOR=#FFD700>【推荐】</font>** 在类中删除未使用的任何字段和方法；在方法中删除未使用的任何参数声明与内部变量。
 
 
-9.  **<font color=#008000>【参考】</font>** 谨慎注释掉代码。 在上方详细<font color=#FF0000>说明</font>，而不是简单地注释掉。 如果无用，则删除。
+9.  **<font color=#008000>【参考】</font>** 谨慎注释掉代码。 在上方详细<font color=#FFD700>说明</font>，而不是简单地注释掉。 如果无用，则删除。
 
-<font color=#FF0000>说明</font>： 代码被注释掉有两种可能性： 1）后续会恢复此段代码逻辑。 2）永久不用。前者如果没有备注信息，难以知晓注释动机。后者建议直接删掉即可，假如需要查阅历史代码， 登录代码仓库即可。
+<font color=#FFD700>说明</font>： 代码被注释掉有两种可能性： 1）后续会恢复此段代码逻辑。 2）永久不用。前者如果没有备注信息，难以知晓注释动机。后者建议直接删掉即可，假如需要查阅历史代码， 登录代码仓库即可。
 
 
 10.  **<font color=#008000>【参考】</font>** 对于注释的要求：第一、能够准确反映设计思想和代码逻辑； 第二、能够描述业务含义，使别的程序员能够迅速了解到代码背后的信息。完全没有注释的大段代码对于阅读者形同天书，注释是给自己看的，即使隔很长时间，也能清晰理解当时的思路； 注释也是给继任者看的，使其能够快速接替自己的工作。
@@ -62,7 +62,7 @@
 put(elephant, fridge);
 ```
 
-方法名 put，加上两个有意义的变量名 elephant 和 fridge，已经<font color=#FF0000>说明</font>了这是在干什么，语义清晰的代码不需要额外的注释。
+方法名 put，加上两个有意义的变量名 elephant 和 fridge，已经<font color=#FFD700>说明</font>了这是在干什么，语义清晰的代码不需要额外的注释。
 
 
 12.  **<font color=#008000>【参考】</font>** 特殊注释标记，请注明标记人与标记时间。注意及时处理这些标记，通过标记扫描，经常清理此类标记。线上故障有时候就是来源于这些标记处的代码。
