--- a/编程规约/集合处理.md
+++ b/编程规约/集合处理.md
@@ -10,12 +10,12 @@
 
 3） 如果自定义对象作为 Map 的键，那么必须覆写 hashCode 和 equals。
 
-<font color=#FF0000>说明</font>： String 因为重写了 hashCode 和 equals 方法，所以我们可以愉快地使用 String 对象作为 key 来使用。
+<font color=#FFD700>说明</font>： String 因为重写了 hashCode 和 equals 方法，所以我们可以愉快地使用 String 对象作为 key 来使用。
 
 
 2. **<font color=#FF0000>【强制】</font>**  判断所有集合内部的元素是否为空，使用 isEmpty()方法，而不是 size()==0 的方式。
 
-<font color=#FF0000>说明</font>： 前者的时间复杂度为 O(1)，而且可读性更好。
+<font color=#FFD700>说明</font>： 前者的时间复杂度为 O(1)，而且可读性更好。
 
 <font color=#008000>正例</font>：
 
@@ -29,7 +29,7 @@ if(map.isEmpty()) {
 
 3. **<font color=#FF0000>【强制】</font>**  在使用 java.util.stream.Collectors 类的 toMap()方法转为 Map 集合时，一定要使用含有参数类型为 BinaryOperator，参数名为 mergeFunction 的方法，否则当出现相同 key 值时会抛出 IllegalStateException 异常。
 
-<font color=#FF0000>说明</font>： 参数 mergeFunction 的作用是当出现 key 重复时，自定义对 value 的处理策略。
+<font color=#FFD700>说明</font>： 参数 mergeFunction 的作用是当出现 key 重复时，自定义对 value 的处理策略。
 
 <font color=#008000>正例</font>：
 
@@ -54,7 +54,7 @@ Map<Integer, String> map = Arrays.stream(departments)
 
 4. **<font color=#FF0000>【强制】</font>**  在使用 java.util.stream.Collectors 类的 toMap()方法转为 Map 集合时，一定要注意当 value 为 null 时会抛 NPE 异常。
 
-<font color=#FF0000>说明</font>： 在 java.util.HashMap 的 merge 方法里会进行如下的判断：
+<font color=#FFD700>说明</font>： 在 java.util.HashMap 的 merge 方法里会进行如下的判断：
 
 ```java
 if (value == null || remappingFunction == null)
@@ -74,7 +74,7 @@ Collectors.toMap(Pair::getKey, Pair::getValue, (v1, v2) -> v2));
 
 5. **<font color=#FF0000>【强制】</font>**  ArrayList 的 subList 结果不可强转成 ArrayList，否则会抛出 ClassCastException 异常： java.util.RandomAccessSubList cannot be cast to java.util.ArrayList。
 
-<font color=#FF0000>说明</font>： subList 返回的是 ArrayList 的内部类 SubList， 并不是 ArrayList 而是 ArrayList 的一个视图，对于 SubList 子列表的所有操作最终会反映到原列表上。
+<font color=#FFD700>说明</font>： subList 返回的是 ArrayList 的内部类 SubList， 并不是 ArrayList 而是 ArrayList 的一个视图，对于 SubList 子列表的所有操作最终会反映到原列表上。
 
 
 6. **<font color=#FF0000>【强制】</font>**  使用 Map 的方法 keySet()/values()/entrySet()返回集合对象时，不可以对其进行添加元素操作，否则会抛出 UnsupportedOperationException 异常。
@@ -101,7 +101,7 @@ list.add("bao");
 String[] array = list.toArray(new String[0]);
 ```
 
-<font color=#FF0000>说明</font>： 使用 toArray 带参方法，数组空间大小的 length，
+<font color=#FFD700>说明</font>： 使用 toArray 带参方法，数组空间大小的 length，
 
 1） 等于 0，动态创建与 size 相同的数组，性能最好。
 
@@ -114,11 +114,11 @@ String[] array = list.toArray(new String[0]);
 
 10. **<font color=#FF0000>【强制】</font>**  在使用 Collection 接口任何实现类的 addAll()方法时，都要对输入的集合参数进行NPE 判断。
 
-<font color=#FF0000>说明</font>： 在 ArrayList#addAll 方法的第一行代码即 Object[] a = c.toArray(); 其中 c 为输入集合参数，如果为 null，则直接抛出异常。
+<font color=#FFD700>说明</font>： 在 ArrayList#addAll 方法的第一行代码即 Object[] a = c.toArray(); 其中 c 为输入集合参数，如果为 null，则直接抛出异常。
 
 
 11. **<font color=#FF0000>【强制】</font>**  使用工具类 Arrays.asList()把数组转换成集合时，不能使用其修改集合相关的方法，它的 add/remove/clear 方法会抛出 UnsupportedOperationException 异常。
-<font color=#FF0000>说明</font>： asList 的返回对象是一个 Arrays 内部类，并没有实现集合的修改方法。 Arrays.asList 体现的是适配器模式，只是转换接口，后台的数据仍是数组。
+<font color=#FFD700>说明</font>： asList 的返回对象是一个 Arrays 内部类，并没有实现集合的修改方法。 Arrays.asList 体现的是适配器模式，只是转换接口，后台的数据仍是数组。
 
 ```java
 String[] str = new String[] { "yang", "hao" };
@@ -132,12 +132,12 @@ List list = Arrays.asList(str);
 
 12. **<font color=#FF0000>【强制】</font>**  泛型通配符<? extends T>来接收返回的数据，此写法的泛型集合不能使用 add 方法，而<? super T>不能使用 get 方法， 两者在接口调用赋值的场景中容易出错。
 
-<font color=#FF0000>说明</font>： 扩展说一下 PECS(Producer Extends Consumer Super)原则： 第一、 频繁往外读取内容的，适合用 <? extends T>。 第二、 经常往里插入的，适合用<? super T>
+<font color=#FFD700>说明</font>： 扩展说一下 PECS(Producer Extends Consumer Super)原则： 第一、 频繁往外读取内容的，适合用 <? extends T>。 第二、 经常往里插入的，适合用<? super T>
 
 
 13. **<font color=#FF0000>【强制】</font>**  在无泛型限制定义的集合赋值给泛型限制的集合时，在使用集合元素时，需要进行instanceof 判断，避免抛出 ClassCastException 异常。
 
-<font color=#FF0000>说明</font>： 毕竟泛型是在 JDK5 后才出现，考虑到向前兼容，编译器是允许非泛型集合与泛型集合互相赋值。
+<font color=#FFD700>说明</font>： 毕竟泛型是在 JDK5 后才出现，考虑到向前兼容，编译器是允许非泛型集合与泛型集合互相赋值。
 
 <font color=#FF0000>反例</font>：
 
@@ -178,12 +178,12 @@ for (String item : list) {
 }
 ```
 
-<font color=#FF0000>说明</font>： 以上代码的执行结果肯定会出乎大家的意料，那么试一下把“1” 换成“2” ，会是同样的结果吗？
+<font color=#FFD700>说明</font>： 以上代码的执行结果肯定会出乎大家的意料，那么试一下把“1” 换成“2” ，会是同样的结果吗？
 
 
 15. **<font color=#FF0000>【强制】</font>**  在 JDK7 版本及以上， Comparator 实现类要满足如下三个条件，不然 Arrays.sort，Collections.sort 会抛 IllegalArgumentException 异常。
 
-<font color=#FF0000>说明</font>： 三个条件如下
+<font color=#FFD700>说明</font>： 三个条件如下
 
 1） x， y 的比较结果和 y， x 的比较结果相反。
 
@@ -204,7 +204,7 @@ new Comparator<Student>() {
 
 16. **<font COLOR=#FFD700>【推荐】</font>** 集合泛型定义时， 在 JDK7 及以上，使用 diamond 语法或全省略。
 
-<font color=#FF0000>说明</font>： 菱形泛型，即 diamond， 直接使用<>来指代前边已经指定的类型。
+<font color=#FFD700>说明</font>： 菱形泛型，即 diamond， 直接使用<>来指代前边已经指定的类型。
 
 <font color=#008000>正例</font>：
 
@@ -217,7 +217,7 @@ ArrayList<User> users = new ArrayList(10);
 
 17. **<font COLOR=#FFD700>【推荐】</font>** 集合初始化时， 指定集合初始值大小。
 
-<font color=#FF0000>说明</font>： HashMap 使用 HashMap(int initialCapacity) 初始化，如果暂时无法确定集合大小， 那么指定默认值（ 16） 即可。
+<font color=#FFD700>说明</font>： HashMap 使用 HashMap(int initialCapacity) 初始化，如果暂时无法确定集合大小， 那么指定默认值（ 16） 即可。
 
 <font color=#008000>正例</font>： initialCapacity = (需要存储的元素个数 / 负载因子) + 1。 注意负载因子（即 loader factor） 默认为 0.75，如果暂时无法确定初始值大小，请设置为 16（即默认值） 。
 
@@ -226,14 +226,14 @@ ArrayList<User> users = new ArrayList(10);
 
 18. **<font COLOR=#FFD700>【推荐】</font>** 使用 entrySet 遍历 Map 类集合 KV，而不是 keySet 方式进行遍历。
 
-<font color=#FF0000>说明</font>： keySet 其实是遍历了 2 次，一次是转为 Iterator 对象，另一次是从 hashMap 中取出 key 所对应的value。而 entrySet 只是遍历了一次就把 key 和 value 都放到了 entry 中，效率更高。如果是 JDK8，使用 Map.forEach 方法。
+<font color=#FFD700>说明</font>： keySet 其实是遍历了 2 次，一次是转为 Iterator 对象，另一次是从 hashMap 中取出 key 所对应的value。而 entrySet 只是遍历了一次就把 key 和 value 都放到了 entry 中，效率更高。如果是 JDK8，使用 Map.forEach 方法。
 
 <font color=#008000>正例</font>： values()返回的是 V 值集合，是一个 list 集合对象； keySet()返回的是 K 值集合，是一个 Set 集合对象； entrySet()返回的是 K-V 值组合集合。
 
 
 19. **<font COLOR=#FFD700>【推荐】</font>** 高度注意 Map 类集合 K/V 能不能存储 null 值的情况，如下表格：
 
-        | 集合类            | Key          | Value        | Super       | <font color=#FF0000>说明</font>                   |
+        | 集合类            | Key          | Value        | Super       | <font color=#FFD700>说明</font>                   |
         |-------------------|--------------|--------------|-------------|------------------------|
         | Hashtable         | 不允许为null | 不允许为null | Dictionary  | 线程安全               |
         | ConcurrentHashMap | 不允许为null | 不允许为null | AbstractMap | 锁分段技术（JDK8:CAS）  |
@@ -245,7 +245,7 @@ ArrayList<User> users = new ArrayList(10);
 
 20. **<font color=#008000>【参考】</font>** 合理利用好集合的有序性(sort)和稳定性(order)，避免集合的无序性(unsort)和不稳定性(unorder)带来的负面影响。
 
-<font color=#FF0000>说明</font>： 有序性是指遍历的结果是按某种比较规则依次排列的。 稳定性指集合每次遍历的元素次序是一定的。
+<font color=#FFD700>说明</font>： 有序性是指遍历的结果是按某种比较规则依次排列的。 稳定性指集合每次遍历的元素次序是一定的。
 
 如： ArrayList 是 order/unsort； HashMap 是 unorder/unsort； TreeSet 是 order/sort。
 
