--- a/MySQL数据库/索引规约.md
+++ b/MySQL数据库/索引规约.md
@@ -1,27 +1,78 @@
 ## (二) 索引规约
-1. 【强制】业务上具有唯一特性的字段，即使是多个字段的组合，也必须建成唯一索引。 
-<br><span style="color:orange">说明</span>：不要以为唯一索引影响了insert速度，这个速度损耗可以忽略，但提高查找速度是明显的；另外，即使在应用层做了非常完善的校验控制，只要没有唯一索引，根据墨菲定律，必然有脏数据产生。 
-2. 【强制】超过三个表禁止join。需要join的字段，数据类型必须绝对一致；多表关联查询时，保证被关联的字段需要有索引。 
-<br><span style="color:orange">说明</span>：即使双表join也要注意表索引、SQL性能。 
-3. 【强制】在varchar字段上建立索引时，必须指定索引长度，没必要对全字段建立索引，根据实际文本区分度决定索引长度即可。 
-<br><span style="color:orange">说明</span>：索引的长度与区分度是一对矛盾体，一般对字符串类型数据，长度为20的索引，区分度会高达90%以上，可以使用count(distinct left(列名, 索引长度))/count(*)的区分度来确定。 
-4. 【强制】页面搜索严禁左模糊或者全模糊，如果需要请走搜索引擎来解决。 
-<br><span style="color:orange">说明</span>：索引文件具有B-Tree的最左前缀匹配特性，如果左边的值未确定，那么无法使用此索引。
-5. 【推荐】如果有order by的场景，请注意利用索引的有序性。order by 最后的字段是组合索引的一部分，并且放在索引组合顺序的最后，避免出现file_sort的情况，影响查询性能。 
-<br><span style="color:green">正例</span>：where a=? and b=? order by c; 索引：a_b_c 
-<br><span style="color:red">反例</span>：索引中有范围查找，那么索引有序性无法利用，如：WHERE a>10 ORDER BY b; 索引a_b无法排序。 
-6. 【推荐】利用覆盖索引来进行查询操作，避免回表。 
-<br><span style="color:orange">说明</span>：如果一本书需要知道第11章是什么标题，会翻开第11章对应的那一页吗？目录浏览一下就好，这个目录就是起到覆盖索引的作用。 
-<br><span style="color:green">正例</span>：能够建立索引的种类分为主键索引、唯一索引、普通索引三种，而覆盖索引只是一种查询的一种效果，用explain的结果，extra列会出现：using index。 
-7. 【推荐】利用延迟关联或者子查询优化超多分页场景。 <br><span style="color:orange">说明</span>：MySQL并不是跳过offset行，而是取offset+N行，然后返回放弃前offset行，返回N行，那当offset特别大的时候，效率就非常的低下，要么控制返回的总页数，要么对超过特定阈值的页数进行SQL改写。 
-<br><span style="color:green">正例</span>：先快速定位需要获取的id段，然后再关联：       
-<pre>SELECT a.* FROM 表1 a, (select id from 表1 where 条件 LIMIT 100000,20 ) b where a.id=b.id </pre>
-8. 【推荐】 SQL性能优化的目标：至少要达到 range 级别，要求是ref级别，如果可以是consts最好。 
-<br><span style="color:orange">说明</span>：  
-1）consts 单表中最多只有一个匹配行（主键或者唯一索引），在优化阶段即可读取到数据。  
-2）ref 指的是使用普通的索引（normal index）。  
-3）range 对索引进行范围检索。 <br><span style="color:red">反例</span>：explain表的结果，type=index，索引物理文件全扫描，速度非常慢，这个index级别比较range还低，与全表扫描是小巫见大巫。 
-9. 【推荐】建组合索引的时候，区分度最高的在最左边。 <br><span style="color:green">正例</span>：如果where a=? and b=? ，a列的几乎接近于唯一值，那么只需要单建idx_a索引即可。 
-<br><span style="color:orange">说明</span>：存在非等号和等号混合判断条件时，在建索引时，请把等号条件的列前置。如：where a>? and b=? 那么即使a的区分度更高，也必须把b放在索引的最前列。 
-10. 【推荐】防止因字段类型不同造成的隐式转换，导致索引失效。 
-11. 【参考】创建索引时避免有如下极端误解：  1）宁滥勿缺。认为一个查询就需要建一个索引。  2）宁缺勿滥。认为索引会消耗空间、严重拖慢更新和新增速度。  3）抵制惟一索引。认为业务的惟一性一律需要在应用层通过“先查后插”方式解决。 
+
+---
+
+1. **<font color=#FF0000>【强制】</font>**  业务上具有唯一特性的字段，即使是组合字段，也必须建成唯一索引。
+
+<font color=#FFD700>说明</font>： 不要以为唯一索引影响了 insert 速度，这个速度损耗可以忽略，但提高查找速度是明显的； 另外，即使在应用层做了非常完善的校验控制，只要没有唯一索引，根据墨菲定律，必然有脏数据产生。
+
+
+2. **<font color=#FF0000>【强制】</font>**  超过三个表禁止 join。需要 join 的字段，数据类型保持绝对一致； 多表关联查询时，保证被关联的字段需要有索引。
+
+<font color=#FFD700>说明</font>： 即使双表 join 也要注意表索引、 SQL 性能。
+
+
+3. **<font color=#FF0000>【强制】</font>**  在 varchar 字段上建立索引时，必须指定索引长度，没必要对全字段建立索引，根据实际文本区分度决定索引长度。
+
+<font color=#FFD700>说明</font>： 索引的长度与区分度是一对矛盾体，一般对字符串类型数据，长度为 20 的索引，区分度会高达 90%以上，可以使用 count(distinct left(列名, 索引长度))/count(*)的区分度来确定。
+
+
+4. **<font color=#FF0000>【强制】</font>**  页面搜索严禁左模糊或者全模糊，如果需要请走搜索引擎来解决。
+
+<font color=#FFD700>说明</font>： 索引文件具有 B-Tree 的最左前缀匹配特性，如果左边的值未确定，那么无法使用此索引。
+
+
+5. **<font COLOR=#FFD700>【推荐】</font>** 如果有 order by 的场景，请注意利用索引的有序性。 order by 最后的字段是组合索引的一部分，并且放在索引组合顺序的最后，避免出现 file_sort 的情况，影响查询性能。
+
+<font color=#008000>正例</font>： where a=? and b=? order by c; 索引： a_b_c
+
+<font color=#FF0000>反例</font>： 索引如果存在范围查询， 那么索引有序性无法利用，如： WHERE a>10 ORDER BY b; 索引 a_b 无法排序。
+
+
+6. **<font COLOR=#FFD700>【推荐】</font>** 利用覆盖索引来进行查询操作， 避免回表。
+<font color=#FFD700>说明</font>： 如果一本书需要知道第 11 章是什么标题，会翻开第 11 章对应的那一页吗？目录浏览一下就好，这个目录就是起到覆盖索引的作用。
+
+<font color=#008000>正例</font>： 能够建立索引的种类分为主键索引、唯一索引、普通索引三种，而覆盖索引只是一种查询的一种效果，用 explain 的结果， extra 列会出现： using index。
+
+
+7. **<font COLOR=#FFD700>【推荐】</font>** 利用延迟关联或者子查询优化超多分页场景。
+
+<font color=#FFD700>说明</font>： MySQL 并不是跳过 offset 行，而是取 offset+N 行，然后返回放弃前 offset 行，返回 N 行，那当offset 特别大的时候，效率就非常的低下，要么控制返回的总页数，要么对超过特定阈值的页数进行 SQL改写。
+
+<font color=#008000>正例</font>： 先快速定位需要获取的 id 段，然后再关联：
+
+```sql
+SELECT a.* FROM 表 1 a, (select id from 表 1 where 条件 LIMIT 100000,20 ) b where a.id=b.id
+```
+
+
+8. **<font COLOR=#FFD700>【推荐】</font>** SQL 性能优化的目标：至少要达到 range 级别， 要求是 ref 级别， 如果可以是 consts 最好。
+
+<font color=#FFD700>说明</font>：
+
+1） consts 单表中最多只有一个匹配行（主键或者唯一索引），在优化阶段即可读取到数据。
+
+2） ref 指的是使用普通的索引（ normal index） 。
+
+3） range 对索引进行范围检索。
+
+<font color=#FF0000>反例</font>： explain 表的结果， type=index，索引物理文件全扫描，速度非常慢，这个 index 级别比较 range 还低，与全表扫描是小巫见大巫。
+
+
+9. **<font COLOR=#FFD700>【推荐】</font>** 建组合索引的时候，区分度最高的在最左边。
+
+<font color=#008000>正例</font>： 如果 where a=? and b=?， a 列的几乎接近于唯一值，那么只需要单建 idx_a 索引即可。
+
+<font color=#FFD700>说明</font>： 存在非等号和等号混合判断条件时，在建索引时，请把等号条件的列前置。如： where c>? and d=? 那么即使 c 的区分度更高，也必须把 d 放在索引的最前列， 即建立组合索引 idx_d_c。
+
+
+10. **<font COLOR=#FFD700>【推荐】</font>** 防止因字段类型不同造成的隐式转换， 导致索引失效。
+
+
+11.  **<font color=#008000>【参考】</font>** 创建索引时避免有如下极端误解：
+
+1） 索引宁滥勿缺。 认为一个查询就需要建一个索引。
+
+2） 吝啬索引的创建。 认为索引会消耗空间、 严重拖慢记录的更新以及行的新增速度。
+
+3） 抵制惟一索引。 认为惟一索引一律需要在应用层通过“先查后插” 方式解决。
