--- a/编程规约/其他.md
+++ b/编程规约/其他.md
@@ -4,22 +4,22 @@
 
 1. **<font color=#FF0000>【强制】</font>**  在使用正则表达式时，利用好其预编译功能，可以有效加快正则匹配速度。
 
-<font color=#FF0000>说明</font>： 不要在方法体内定义： Pattern pattern = Pattern.compile(“规则” );
+<font color=#FFD700>说明</font>： 不要在方法体内定义： Pattern pattern = Pattern.compile(“规则” );
 
 
 2. **<font color=#FF0000>【强制】</font>**  避免用 Apache Beanutils 进行属性的 copy。
 
-<font color=#FF0000>说明</font>： Apache BeanUtils 性能较差，可以使用其他方案比如 Spring BeanUtils, Cglib BeanCopier，注意均是浅拷贝。
+<font color=#FFD700>说明</font>： Apache BeanUtils 性能较差，可以使用其他方案比如 Spring BeanUtils, Cglib BeanCopier，注意均是浅拷贝。
 
 
 3. **<font color=#FF0000>【强制】</font>**  velocity 调用 POJO 类的属性时，直接使用属性名取值即可，模板引擎会自动按规范调用 POJO 的 getXxx()，如果是 boolean 基本数据类型变量（ boolean 命名不需要加 is 前缀） ，会自动调用 isXxx()方法。
 
-<font color=#FF0000>说明</font>： 注意如果是 Boolean 包装类对象，优先调用 getXxx()的方法。
+<font color=#FFD700>说明</font>： 注意如果是 Boolean 包装类对象，优先调用 getXxx()的方法。
 
 
 4. **<font color=#FF0000>【强制】</font>**  后台输送给页面的变量必须加$!{var}——中间的感叹号。
 
-<font color=#FF0000>说明</font>： 如果 var 等于 null 或者不存在，那么${var}会直接显示在页面上。
+<font color=#FFD700>说明</font>： 如果 var 等于 null 或者不存在，那么${var}会直接显示在页面上。
 
 
 5. **<font color=#FF0000>【强制】</font>**  注意 Math.random() 这个方法返回是 double 类型，注意取值的范围 0≤x<1（ 能够取到零值，注意除零异常） ，如果想获取整数类型的随机数，不要将 x 放大 10 的若干倍然后取整，直接使用 Random 对象的 nextInt 或者 nextLong 方法。
@@ -27,7 +27,7 @@
 
 6. **<font COLOR=#FFD700>【推荐】</font>** 不要在视图模板中加入任何复杂的逻辑。
 
-<font color=#FF0000>说明</font>： 根据 MVC 理论，视图的职责是展示，不要抢模型和控制器的活。
+<font color=#FFD700>说明</font>： 根据 MVC 理论，视图的职责是展示，不要抢模型和控制器的活。
 
 
 7. **<font COLOR=#FFD700>【推荐】</font>** 任何数据结构的构造或初始化，都应指定大小，避免数据结构无限增长吃光内存。
@@ -35,9 +35,9 @@
 
 8. **<font COLOR=#FFD700>【推荐】</font>** 及时清理不再使用的代码段或配置信息。
 
-<font color=#FF0000>说明</font>： 对于垃圾代码或过时配置，坚决清理干净，避免程序过度臃肿，代码冗余。
+<font color=#FFD700>说明</font>： 对于垃圾代码或过时配置，坚决清理干净，避免程序过度臃肿，代码冗余。
 
-<font color=#008000>正例</font>： 对于暂时被注释掉，后续可能恢复使用的代码片断，在注释代码上方，统一规定使用三个斜杠(///)来<font color=#FF0000>说明</font>注释掉代码的理由。 如：
+<font color=#008000>正例</font>： 对于暂时被注释掉，后续可能恢复使用的代码片断，在注释代码上方，统一规定使用三个斜杠(///)来<font color=#FFD700>说明</font>注释掉代码的理由。 如：
 
 ```java
 public static void hello() {
