--- a/编程规约/命名风格.md
+++ b/编程规约/命名风格.md
@@ -113,7 +113,7 @@ class Son extends ConfusingName {
 
 14. **<font COLOR=#FFD700>【推荐】</font>** 如果模块、 接口、类、方法使用了设计模式，在命名时需体现出具体模式。 
 
-<font color=#FF0000>说明</font>：将设计模式体现在名字中，有利于阅读者快速理解架构设计理念。
+<font color=#FFD700>说明</font>：将设计模式体现在名字中，有利于阅读者快速理解架构设计理念。
 
 <font color=#008000> 正例</font>：
 
@@ -134,7 +134,7 @@ public class ResourceObserver;
 
 <font color=#ff0000>反例</font>：接口方法定义 public abstract void f();
 
-<font color=#FF0000>说明</font>：JDK8 中接口允许有默认实现，那么这个 default 方法，是对所有实现类都有价值的默认实现。
+<font color=#FFD700>说明</font>：JDK8 中接口允许有默认实现，那么这个 default 方法，是对所有实现类都有价值的默认实现。
 
 
 16.  接口和实现类的命名有两套规则：  
@@ -150,7 +150,7 @@ public class ResourceObserver;
 
 17. <font COLOR=#008000> 【参考】</font> 枚举类名带上 Enum 后缀，枚举成员名称需要全大写，单词间用下划线隔开。
 
-<font color=#FF0000>说明</font>：枚举其实就是特殊的常量类，且构造方法被默认强制是私有。
+<font color=#FFD700>说明</font>：枚举其实就是特殊的常量类，且构造方法被默认强制是私有。
 
 <font color=#008000> 正例</font>：枚举名字为 ProcessStatusEnum 的成员名称： SUCCESS / UNKNOWN_REASON。 
 
