--- a/编程规约/日期时间.md
+++ b/编程规约/日期时间.md
@@ -4,14 +4,14 @@
 
 1. **<font color=#FF0000>【强制】</font>**  日期格式化时，传入 pattern 中表示年份统一使用小写的 y。
 
-<font color=#FF0000>说明</font>： 日期格式化时， yyyy 表示当天所在的年，而大写的 YYYY 代表是 week in which year（ JDK7 之后引入的概念），意思是当天所在的周属于的年份，一周从周日开始，周六结束，只要本周跨年，返回的 YYYY就是下一年。
+<font color=#FFD700>说明</font>： 日期格式化时， yyyy 表示当天所在的年，而大写的 YYYY 代表是 week in which year（ JDK7 之后引入的概念），意思是当天所在的周属于的年份，一周从周日开始，周六结束，只要本周跨年，返回的 YYYY就是下一年。
 
 <font color=#008000>正例</font>： 表示日期和时间的格式如下所示：
 new SimpleDateFormat("yyyy-MM-dd HH:mm:ss")
 
 
 2. **<font color=#FF0000>【强制】</font>**  在日期格式中分清楚大写的 M 和小写的 m，大写的 H 和小写的 h 分别指代的意义。
-<font color=#FF0000>说明</font>： 日期格式中的这两对字母表意如下：
+<font color=#FFD700>说明</font>： 日期格式中的这两对字母表意如下：
 
 1） 表示月份是大写的 M；
 
@@ -24,12 +24,12 @@ new SimpleDateFormat("yyyy-MM-dd HH:mm:ss")
 
 3. **<font color=#FF0000>【强制】</font>**  获取当前毫秒数： System.currentTimeMillis(); 而不是 new Date().getTime()。
 
-<font color=#FF0000>说明</font>： 如果想获取更加精确的纳秒级时间值，使用 System.nanoTime 的方式。在 JDK8 中，针对统计时间等场景，推荐使用 Instant 类。
+<font color=#FFD700>说明</font>： 如果想获取更加精确的纳秒级时间值，使用 System.nanoTime 的方式。在 JDK8 中，针对统计时间等场景，推荐使用 Instant 类。
 
 
 4. **<font color=#FF0000>【强制】</font>**  不允许在程序任何地方中使用： 1） java.sql.Date 2） java.sql.Time 3）java.sql.Timestamp。
 
-<font color=#FF0000>说明</font>： 第 1 个不记录时间， getHours()抛出异常；第 2 个不记录日期， getYear()抛出异常；第 3 个在构造方法 super((time/1000)*1000)， fastTime 和 nanos 分开存储秒和纳秒信息。
+<font color=#FFD700>说明</font>： 第 1 个不记录时间， getHours()抛出异常；第 2 个不记录日期， getYear()抛出异常；第 3 个在构造方法 super((time/1000)*1000)， fastTime 和 nanos 分开存储秒和纳秒信息。
 
 <font color=#FF0000>反例</font>： java.util.Date.after(Date)进行时间比较时，当入参是 java.sql.Timestamp 时，会触发 JDK BUG(JDK9 已修复)，可能导致比较时的意外结果。
 
@@ -61,6 +61,6 @@ calendar.add(Calendar.DATE, 365);
 
 7. **<font COLOR=#FFD700>【推荐】</font>** 使用枚举值来指代月份。如果使用数字，注意 Date， Calendar 等日期相关类的月份month 取值在 0-11 之间。
 
-<font color=#FF0000>说明</font>： 参考 JDK 原生注释， Month value is 0-based. e.g., 0 for January.
+<font color=#FFD700>说明</font>： 参考 JDK 原生注释， Month value is 0-based. e.g., 0 for January.
 
 <font color=#008000>正例</font>： Calendar.JANUARY， Calendar.FEBRUARY， Calendar.MARCH 等来指代相应月份来进行传参或比较。
