修改集合处理部分表格格式

--- a/编程规约/集合处理.md
+++ b/编程规约/集合处理.md
@@ -233,17 +233,18 @@ ArrayList<User> users = new ArrayList(10);
 
 19. **<font COLOR=#FFD700>【推荐】</font>** 高度注意 Map 类集合 K/V 能不能存储 null 值的情况，如下表格：
 
-        | 集合类            | Key          | Value        | Super       | <font color=#FFD700>说明</font>                   |
-        |-------------------|--------------|--------------|-------------|------------------------|
-        | Hashtable         | 不允许为null | 不允许为null | Dictionary  | 线程安全               |
-        | ConcurrentHashMap | 不允许为null | 不允许为null | AbstractMap | 锁分段技术（JDK8:CAS）  |
-        | TreeMap           | 不允许为null | 允许为null   | AbstractMap | 线程不安全             |
-        | HashMap           | 允许为null   | 允许为null   | AbstractMap | 线程不安全             |
+    | 集合类 | Key  | Value | Super | 说明 |
+    | ------ | ---- | ----- | ----- | ---- |
+    | Hashtable       | 不允许为null     | 不允许为 null | Dictionary | 线程安全 |
+    | ConcurrentHashMap       | 不允许为null     | 不允许为 null | AbstractMap | 锁分段技术（JDK8:CAS） |
+    | TreeMap       | 不允许为null     | 允许为null    | AbstractMap      | 线程不安全 |
+    | HashMap       | 允许为null     | 允许为null | AbstractMap      | 线程不安全 |
+    
 
 <font color=#FF0000>反例</font>： 由于 HashMap 的干扰，很多人认为 ConcurrentHashMap 是可以置入 null 值，而事实上， 存储null 值时会抛出 NPE 异常。
 
 
-20. **<font color=#008000>【参考】</font>** 合理利用好集合的有序性(sort)和稳定性(order)，避免集合的无序性(unsort)和不稳定性(unorder)带来的负面影响。
+1.  **<font color=#008000>【参考】</font>** 合理利用好集合的有序性(sort)和稳定性(order)，避免集合的无序性(unsort)和不稳定性(unorder)带来的负面影响。
 
 <font color=#FFD700>说明</font>： 有序性是指遍历的结果是按某种比较规则依次排列的。 稳定性指集合每次遍历的元素次序是一定的。
 
