修改了基础格式错误

--- a/异常日志/异常处理.md
+++ b/异常日志/异常处理.md
@@ -90,8 +90,7 @@ public int checkReturn() {
 12. **<font COLOR=#FFD700>【推荐】</font>** 定义时区分 unchecked / checked 异常，避免直接抛出 new RuntimeException()，更不允许抛出 Exception 或者 Throwable，应使用有业务含义的自定义异常。推荐业界已定义过的自定义异常，如： DAOException / ServiceException 等。
 
 
-13. **<font color=#008000>【参考】</font>** 对于公司外的 http/api 开放接口必须使用“错误码” ；而应用内部推荐异常抛出；跨应用间 RPC 调用优先考虑使用 Result 方式，封装 isSuccess()方法、 “错误码” 、 “错误
-简短信息” ；而应用内部推荐异常抛出。
+13. **<font color=#008000>【参考】</font>** 对于公司外的 http/api 开放接口必须使用“错误码” ；**而应用内部推荐异常抛出**；跨应用间 RPC 调用优先考虑使用 Result 方式，封装 isSuccess()方法、 “错误码” 、 “错误简短信息” ；**而应用内部推荐异常抛出**。
 
 <font color=#FFD700>说明</font>： 关于 RPC 方法返回方式使用 Result 方式的理由：
 
