--- a/编程规约/日期时间.md
+++ b/编程规约/日期时间.md
@@ -7,8 +7,9 @@
 <font color=#FFD700>说明</font>： 日期格式化时， yyyy 表示当天所在的年，而大写的 YYYY 代表是 week in which year（ JDK7 之后引入的概念），意思是当天所在的周属于的年份，一周从周日开始，周六结束，只要本周跨年，返回的 YYYY就是下一年。
 
 <font color=#008000>正例</font>： 表示日期和时间的格式如下所示：
+```java
 new SimpleDateFormat("yyyy-MM-dd HH:mm:ss")
-
+```
 
 2. **<font color=#FF0000>【强制】</font>**  在日期格式中分清楚大写的 M 和小写的 m，大写的 H 和小写的 h 分别指代的意义。
 <font color=#FFD700>说明</font>： 日期格式中的这两对字母表意如下：
