--- a/异常日志/错误码.md
+++ b/异常日志/错误码.md
@@ -7,7 +7,13 @@
 
 <font color=#FFD700>说明</font>： 错误码想得过于完美和复杂，就像康熙字典中的生僻字一样，用词似乎精准，但是字典不容易随身携带并且简单易懂。
 
-<font color=#008000>正例</font>： 错误码回答的问题是谁的错？错在哪？ 1）错误码必须能够快速知晓错误来源，可快速判断是谁的问题。 2）错误码易于记忆和比对（代码中容易 equals）。 3）错误码能够脱离文档和系统平台达到线下轻量化地自由沟通的目的。
+<font color=#008000>正例</font>： 错误码回答的问题是谁的错？错在哪？ 
+
+1）错误码必须能够快速知晓错误来源，可快速判断是谁的问题。 
+
+2）错误码易于记忆和比对（代码中容易 equals）。 
+
+3）错误码能够脱离文档和系统平台达到线下轻量化地自由沟通的目的。
 
 
 2. **<font color=#FF0000>【强制】</font>**  错误码不体现版本号和错误等级信息。
@@ -20,13 +26,22 @@
 
 4. **<font color=#FF0000>【强制】</font>**  错误码为字符串类型，共 5 位，分成两个部分：错误产生来源+四位数字编号。
 
-<font color=#FFD700>说明</font>： 错误产生来源分为 A/B/C， A 表示错误来源于用户，比如参数错误，用户安装版本过低，用户支付超时等问题； B 表示错误来源于当前系统，往往是业务逻辑出错，或程序健壮性差等问题； C 表示错误来源于第三方服务，比如 CDN 服务出错，消息投递超时等问题；四位数字编号从 0001 到 9999，大类之间的步长间距预留 100，参考文末附表 3。
+<font color=#FFD700>说明</font>： 错误产生来源分为 A/B/C， 
+
+A 表示错误来源于用户，比如参数错误，用户安装版本过低，用户支付超时等问题； 
+
+B 表示错误来源于当前系统，往往是业务逻辑出错，或程序健壮性差等问题； 
+
+C 表示错误来源于第三方服务，比如 CDN 服务出错，消息投递超时等问题；
+
+四位数字编号从 0001 到 9999，大类之间的步长间距预留 100，参考文末附表 3。
 
 
 5. **<font color=#FF0000>【强制】</font>**  编号不与公司业务架构，更不与组织架构挂钩，一切与平台先到先申请的原则进行，审批生效，编号即被永久固定。
 
 
 6. **<font color=#FF0000>【强制】</font>**  错误码使用者避免随意定义新的错误码。
+
 <font color=#FFD700>说明</font>： 尽可能在原有错误码附表中找到语义相同或者相近的错误码在代码中使用即可。
 
 
